Test: VOLUNTEER_REPOSITORY_TEST